objects/Student__c.object
<CustomObject>
    <description>new student desc added for testing</description>
    <fields>
        <fullName>Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>StudentKnownLanguages__c</fullName>
        <label>StudentKnownLanguages</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Telugu</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Tamil</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StudentSkils__c</fullName>
        <label>StudentSkils</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>JAVA</fullName>
                </value>
                <value>
                    <fullName>HTML</fullName>
                </value>
                <value>
                    <fullName>Javascript</fullName>
                </value>
                <value>
                    <fullName>JQuery</fullName>
                </value>
                <value>
                    <fullName>Webservices</fullName>
                </value>
                <value>
                    <fullName>Spring</fullName>
                </value>
                <value>
                    <fullName>Hibernate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <displayFormat>St-{000}</displayFormat>
        <label>StudentNumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Text</label>
        <length>55</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <recordTypes>
        <fullName>sr1</fullName>
        <active>true</active>
        <label>sr1</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>New_Validation_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(Phone__c ))</errorConditionFormula>
        <errorDisplayField>Phone__c</errorDisplayField>
        <errorMessage>Phone Filed Should not be blank</errorMessage>
    </validationRules>
</CustomObject>